added departments ans fixing some css issue

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=3d1510f8214e030d5cc6",
-    "/css/app.css": "/css/app.css?id=6a4624f7c6a06964f820",
-    "/css/dashboard.css": "/css/dashboard.css?id=9eb213be06e493a5a295"
+    "/js/app.js": "/js/app.js?id=eef38a8bb2dd50e2f96b",
+    "/css/app.css": "/css/app.css?id=3c8f67d26ff6badc1df6"
 }
