--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "realrashid/sweet-alert": "^2.0"
+        "realrashid/sweet-alert": "^2.0",
+        "stripe/stripe-php": "^7.7"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
