--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "barryvdh/laravel-dompdf": "^0.8.5",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
+        "laravel/nexmo-notification-channel": "^2.2",
         "laravel/tinker": "^1.0",
+        "nexmo/client": "^2.0",
         "realrashid/sweet-alert": "^2.0",
         "stripe/stripe-php": "^7.7"
     },
